examples/test/testpolicy6697.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6697
  namespace: namespace336
spec:
  podSelector:
    matchLabels:
      key5: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value47
          key35: value38
      podSelector:
        matchLabels:
          key19: value3
          key31: value43
